tests/valid/CoCoIntegrateOdesCalledIfEquationsDefined.nestml
/**
 *
 *  CoCoIntegrateOdesCalledIfEquationsDefined.nestml
 *
 *  This file is part of NEST.
 *
 *  Copyright (C) 2004 The NEST Initiative
 *
 *  NEST is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  NEST is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with NEST.  If not, see <http://www.gnu.org/licenses/>.
 *
 *
 * This model is used to test the check that integrate_odes() is called if one or more dynamical equations are defined.
 *
 * Positive case.
*/
neuron CoCoIntegrateOdesCalledIfEquationsDefined:
    initial_values:
        x real = 1.
        y integer = 0
    end

    equations:
        x' = -x / (10 ms)
    end

    update:
        y = min(x, y)
        integrate_odes()
    end
end
